[package]
name = "vivoh-quic-hls"
version = "0.1.0"
edition = "2021"
authors = ["Vivoh, Inc."]
license = "Proprietary"
description = "HLS over QUIC"

[[bin]]
name = "vqd-server"
path = "src/server.rs"

[[bin]]
name = "vqd-publisher"
path = "src/publisher.rs"

[dependencies]

# ─── Core Runtime & Utils ───────────────────────────────────────
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2"
uuid = { version = "1.3", features = ["v4"] }
bytes = "1.5"
byteorder = "1.5"
regex = "1.10.2" 
glob = "0.3.1" 

# ─── Serialization & Data Formats ──────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
quick-xml = { version = "0.29.0", features = ["serialize"] } # for MPD parsing
mp4 = "0.14" # CMAF/fMP4 parsing

# ─── Logging & Debugging ───────────────────────────────────────
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ─── File I/O & Directory Watching ─────────────────────────────
notify = "6.1"
walkdir = "2.5"

# ─── WebTransport over QUIC ────────────────────────────────────
quinn = { version = "0.11", features = ["ring", "rustls", "runtime-tokio"] }
web-transport-quinn = "0.5"

# ─── HTTP/2 + H3 Stack (optional) ──────────────────────────────
http = "1.0"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full", "http2"] }
hyper-util = { version = "0.1.10", features = ["tokio", "full"] }
tokio-util = { version = "0.7", features = ["compat"] }
url = "2.5"

# ─── TLS / Crypto / Certificates ───────────────────────────────
rustls = { version = "0.23" }
tokio-rustls = "0.26"
rustls-native-certs = "0.7"
ring = "0.17"
webpki = "0.22"
rustls-pemfile = "1.0"
rustls-pki-types = "1.0"

# ─── CLI (Optional) ────────────────────────────────────────────
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
rustc_version = "0.4"

[profile.release]
debug = false
lto = true
opt-level = 3
codegen-units = 1
